2001-08-07  Nick Clifton  <nickc@cambridge.redhat.com>

	* coff-sh.c (sh_coff_reloc_type_lookup): Provide for sh-coff
	targets as well as sh-pe.

2001-08-03  Ben Harris <bjh21@netbsd.org>

	* elf32-arm.h (elf32_arm_final_link_relocate): Include offset of
	reloc from start of section when computing value for R_ARM_REL32
	reloc.

2001-08-03  Alan Modra  <amodra@bigpond.net.au>

	From  H.J. Lu  <hjl@gnu.org>
	* elf32-i386.c (allocate_plt_and_got_and_discard_relocs): Don't
	keep relocs for undefined syms if there are no dynamic sections in
	executable.
	* elf32-hppa.c (allocate_plt_and_got_and_discard_relocs): Likewise.

2001-08-02  Paul Sokolovsky  <paul.sokolovsky@technologist.com>

	* cofflink.c (coff_link_check_ar_symbols): also search for
	__imp__symbol as well as _symbol.
	* linker.c (_bfd_generic_link_add_archive_symbols): also
	search for __imp__symbol as well as _symbol.

2001-08-01  Adam Nemet  <anemet@lnxw.com>

	* elf.c (elf_sort_sections): Return zero only as the last step.

2001-08-01  Nick Clifton  <nickc@cambridge.redhat.com>

	* config.bfd (arm-vxworks): Change name of define from VXWORKS to
	ARM_COFF_BUGFIX.
	(arm-epoc-pe): Define ARM_COFF_BUGFIX.
	coff-arm.c (coff_arm_relocate_section): Replace VXWORKS with
	ARM_COFF_BUGFIX.

2001-07-30  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* libecoff.h (_bfd_ecoff_styp_to_sec_flags): Changed return type
	to match corresponding bfd_coff_backend data member.

2001-07-24  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am: Update dependencies with "make dep-am".
	* Makefile.in: Regenerate

2001-07-15  H.J. Lu  <hjl@gnu.org>

	* Makefile.am (po/SRC-POTFILES.in): Use tmp.src instead of tmp.
	(po/BLD-POTFILES.in): Use tmp.bld instead of tmp.
	* Makefile.in: Regenerate.

2001-07-11  H.J. Lu  <hjl@gnu.org>

	* elf64-alpha.c (elf64_alpha_check_relocs): Set the ALLOC|LOAD
	flags when creating the reloc section if the ALLOC flag in the
	source section is set.

2001-07-11  Steve Ellcey  <sje@cup.hp.com>
